Add custom allocator (useful mostly on windows)
Windows default malloc (from Visual Studio runtime) sometimes use way
too much memory when reallocating various sizes (see spp_alloc_test.cc
example).
This checkin adds a custom C++ allocator based on Doug Lea's malloc that
is very efficient (both time and space), and sparsepp uses this new
allocator by default on windows (only). If you want to use the default
malloc on windows, define the preprocessor variable
SPP_DEFAULT_ALLOCATOR.

--- a/examples/makefile
+++ b/examples/makefile
@@ -1,6 +1,6 @@
 CXXFLAGS     = -O2 -std=c++11 -I..
 CXXFLAGS    += -Wall -pedantic -Wextra -D_XOPEN_SOURCE=700 
-SPP_DEPS_1   =  spp.h spp_utils.h spp_alloc.h spp_bitset.h spp_btree.h spp_traits.h spp_config.h
+SPP_DEPS_1   =  spp.h spp_utils.h spp_dlalloc.h spp_traits.h spp_config.h
 SPP_DEPS     = $(addprefix ../sparsepp/,$(SPP_DEPS_1))
 TARGETS      = emplace hash_std serialize_file serialize_stream serialize_large
 
