--- a/tests/makefile
+++ b/tests/makefile
@@ -1,8 +1,8 @@
 CXXFLAGS     = -O2 -std=c++11 -I..
 CXXFLAGS    += -Wall -pedantic -Wextra -D_XOPEN_SOURCE=700 
-SPP_DEPS_1   =  spp.h spp_utils.h spp_alloc.h spp_bitset.h spp_btree.h spp_traits.h spp_config.h
+SPP_DEPS_1   =  spp.h spp_utils.h spp_dlalloc.h spp_traits.h spp_config.h
 SPP_DEPS     = $(addprefix ../sparsepp/,$(SPP_DEPS_1))
-TARGETS      = spp_test spp_alloc_test spp_bitset_test perftest1
+TARGETS      = spp_test spp_alloc_test spp_bitset_test perftest1 bench
 
 
 ifeq ($(OS),Windows_NT)
