Use relative includes within library so it is not necessary to pass -I to the compiler

--- a/tests/makefile
+++ b/tests/makefile
@@ -9,7 +9,7 @@ ifeq ($(OS),Windows_NT)
     LDFLAGS  = -lpsapi
 endif
 
-def: spp_test 
+def: spp_test spp_relative_include_test
 
 all: $(TARGETS)
 
@@ -21,6 +21,10 @@ test:
 
 spp_test: spp_test.cc $(SPP_DEPS) makefile
 	$(CXX) $(CXXFLAGS) -D_CRT_SECURE_NO_WARNINGS spp_test.cc -o spp_test
+
+# Test that it's possible to use spp with relative includes only - without adding -I to the compiler
+spp_relative_include_test: spp_relative_include_test.cc $(SPP_DEPS) makefile
+	$(CXX) $(filter-out -I%,$(CXXFLAGS)) -D_CRT_SECURE_NO_WARNINGS spp_relative_include_test.cc -o spp_test
 
 %: %.cc $(SPP_DEPS) makefile
 	$(CXX) $(CXXFLAGS) -DNDEBUG $< -o $@ $(LDFLAGS)
