--- a/tests/makefile
+++ b/tests/makefile
@@ -1,5 +1,5 @@
 CXXFLAGS     = -O2 -std=c++11 -I..
-CXXFLAGS    += -Wall -pedantic -Wextra -D_XOPEN_SOURCE=700 
+CXXFLAGS    += -Wall -pedantic -Wextra
 SPP_DEPS_1   =  spp.h spp_utils.h spp_dlalloc.h spp_traits.h spp_config.h
 SPP_DEPS     = $(addprefix ../sparsepp/,$(SPP_DEPS_1))
 TARGETS      = spp_test spp_alloc_test spp_bitset_test perftest1 bench
@@ -7,6 +7,11 @@ TARGETS      = spp_test spp_alloc_test spp_bitset_test perftest1 bench
 
 ifeq ($(OS),Windows_NT)
     LDFLAGS  = -lpsapi
+else
+    OS = $(shell uname -s)
+    ifeq ($(OS),Linux)
+        CXXFLAGS        += -D_XOPEN_SOURCE=700
+    endif
 endif
 
 def: spp_test spp_relative_include_test
