examples/makefile: Add FreeBSD-specific linker flags
Add -lkvm for FreeBSD-specific build as we use kvm(3) APIs.

--- a/examples/makefile
+++ b/examples/makefile
@@ -11,6 +11,9 @@ else
     ifeq ($(OS),Linux)
         CXXFLAGS        += -D_XOPEN_SOURCE=700
     endif
+    ifeq ($(OS),FreeBSD)
+	LDFLAGS		= -lkvm
+    endif
 endif
 
 all: $(TARGETS)
