try to expand compiler testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: cpp
-
-os:
-  - linux
-  - osx
-
-compiler:
-  - clang
-  - gcc
+matrix:
+  include:
+    - os: linux
+      compiler: gcc
+    - os: linux
+      compiler: clang
+    - os: osx
+      compiler: gcc
+    - os: osx
+      compiler: clang
 
 dist: trusty
 sudo: false
