--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,18 @@ matrix:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-8']
       env: COMPILER=g++-8
+    - os: linux
+      compiler: clang
+        apt:
+          sources: ['llvm-toolchain-trusty-6.0']
+          packages: ['clang-6.0']
+      env: COMPILER=clang++-6.0
+    - os: linux
+      compiler: clang
+        apt:
+          sources: ['llvm-toolchain-trusty-7']
+          packages: ['clang-7.0']
+      env: COMPILER=clang++-7.0
     - os: osx
       compiler: gcc
     - os: osx
