--- a/.travis.yml
+++ b/.travis.yml
@@ -11,26 +11,33 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-5']
-      env: COMPILER=g++-5
+      env: COMPILER='g++-5'
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['gcc-7']
+      env: COMPILER='g++-7' CPP14=1
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-8']
-      env: COMPILER=g++-8
+      env: COMPILER='g++-8' CPP14=1
     - os: linux
       compiler: clang
         apt:
           sources: ['llvm-toolchain-trusty-6.0']
           packages: ['clang-6.0']
-      env: COMPILER=clang++-6.0
+      env: COMPILER='clang++-6.0' CPP14=1
     - os: linux
       compiler: clang
         apt:
           sources: ['llvm-toolchain-trusty-7']
           packages: ['clang-7.0']
-      env: COMPILER=clang++-7.0
+      env: COMPILER='clang++-7.0' CPP14=1
     - os: osx
       compiler: gcc
     - os: osx
