--- a/.travis.yml
+++ b/.travis.yml
@@ -11,41 +11,44 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-5']
-      env: CXX='g++-5'
+      env: COMPILER='g++-5'
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-7']
-      env: CXX='g++-7' CPP14=1
+      env: COMPILER='g++-7'
     - os: linux
       compiler: gcc
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['gcc-8']
-      env: CXX='g++-8' CPP14=1
+      env: COMPILER='g++-8'
     - os: linux
       compiler: clang
       addons:
         apt:
           sources: ['llvm-toolchain-trusty-6.0']
           packages: ['clang-6.0', 'libstdc++-7-dev']
-      env: CXX='clang++-6.0' CPP14=1
+      env: COMPILER='clang++-6.0'
     - os: linux
       compiler: clang
       addons:
         apt:
           sources: ['llvm-toolchain-trusty-7.0', 'libstdc++-7-dev']
           packages: ['clang-7.0']
-      env: CXX='clang++-7.0' CPP14=1
+      env: COMPILER='clang++-7.0'
     - os: osx
       compiler: gcc
     - os: osx
       compiler: clang
 
 dist: trusty
-sudo: false
+sudo: true
+
+before_script:
+  - export CXX=${COMPILER}
 
 script: cd tests && make && make test
