--- a/.travis.yml
+++ b/.travis.yml
@@ -7,41 +7,41 @@ matrix:
     - os: linux
       compiler: clang
       env: COMPILER='clang++'
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['gcc-5']
-      env: COMPILER='g++-5'
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['gcc-7']
-      env: COMPILER='g++-7'
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['gcc-8']
-      env: COMPILER='g++-8'
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: ['llvm-toolchain-trusty-6.0']
-          packages: ['clang-6.0']
-      env: COMPILER='clang++-6.0'
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: ['llvm-toolchain-trusty-7.0']
-          packages: ['clang-7.0']
-      env: COMPILER='clang++-7.0'
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: ['ubuntu-toolchain-r-test']
+##          packages: ['gcc-5']
+##      env: COMPILER='g++-5'
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: ['ubuntu-toolchain-r-test']
+##          packages: ['gcc-7']
+##      env: COMPILER='g++-7'
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: ['ubuntu-toolchain-r-test']
+##          packages: ['gcc-8']
+##      env: COMPILER='g++-8'
+##    - os: linux
+##      compiler: clang
+##      addons:
+##        apt:
+##          sources: ['llvm-toolchain-trusty-6.0']
+##          packages: ['clang-6.0']
+##      env: COMPILER='clang++-6.0'
+##    - os: linux
+##      compiler: clang
+##      addons:
+##        apt:
+##          sources: ['llvm-toolchain-trusty-7.0']
+##          packages: ['clang-7.0']
+##      env: COMPILER='clang++-7.0'
     - os: osx
       compiler: gcc
       env: COMPILER='g++'
