--- a/.travis.yml
+++ b/.travis.yml
@@ -32,34 +32,51 @@ matrix:
       compiler: gcc
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['gcc-7']
+          sources: 
+            - ubuntu-toolchain-r-test
+          packages: 
+            - g++-6
+      env: COMPILER='g++-6'
+
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: 
+            - ubuntu-toolchain-r-test
+          packages: 
+            - g++-7
       env: COMPILER='g++-7'
 
     - os: linux
       compiler: gcc
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['gcc-8']
+          sources: 
+            - ubuntu-toolchain-r-test
+          packages: 
+            - g++-8
       env: COMPILER='g++-8'
 
     - os: linux
       compiler: clang
       addons:
         apt:
-          sources: ['llvm-toolchain-trusty-6.0']
-          packages: ['clang-6.0']
+          sources: 
+            - llvm-toolchain-trusty-6.0
+          packages:
+            - clang-6.0
       env: COMPILER='clang++-6.0'
 
     - os: linux
       compiler: clang
       addons:
         apt:
-          sources: ['llvm-toolchain-trusty-7.0']
-          packages: ['clang-7.0']
+          sources: 
+            - llvm-toolchain-trusty-6.0
+          packages:
+            - clang-7.0
       env: COMPILER='clang++-7.0'
-
 
 dist: trusty
 sudo: false
