travis.yml for clang

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,81 +2,91 @@ language: cpp
 matrix:
   include:
 
-    - os: linux
-      compiler: gcc
-      env: COMPILER='g++'
-
+##    - os: linux
+##      compiler: gcc
+##      env: COMPILER='g++'
+##
+##    - os: linux
+##      compiler: clang
+##      env: COMPILER='clang++'
+##
+##    - os: osx
+##      compiler: gcc
+##      env: COMPILER='g++'
+##
+##    - os: osx
+##      compiler: clang
+##      env: COMPILER='clang++'
+##
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: 
+##            - ubuntu-toolchain-r-test
+##          packages: 
+##            - g++-5
+##      env: COMPILER='g++-5'
+##
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: 
+##            - ubuntu-toolchain-r-test
+##          packages: 
+##            - g++-6
+##      env: COMPILER='g++-6'
+##
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: 
+##            - ubuntu-toolchain-r-test
+##          packages: 
+##            - g++-7
+##      env: COMPILER='g++-7'
+##
+##    - os: linux
+##      compiler: gcc
+##      addons:
+##        apt:
+##          sources: 
+##            - ubuntu-toolchain-r-test
+##          packages: 
+##            - g++-8
+##      env: COMPILER='g++-8'
+##
     - os: linux
       compiler: clang
-      env: COMPILER='clang++'
-
-    - os: osx
-      compiler: gcc
-      env: COMPILER='g++'
-
-    - os: osx
-      compiler: clang
-      env: COMPILER='clang++'
-
-    - os: linux
-      compiler: gcc
       addons:
         apt:
           sources: 
-            - ubuntu-toolchain-r-test
-          packages: 
-            - g++-5
-      env: COMPILER='g++-5'
-
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: 
-            - ubuntu-toolchain-r-test
-          packages: 
-            - g++-6
-      env: COMPILER='g++-6'
-
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: 
-            - ubuntu-toolchain-r-test
-          packages: 
-            - g++-7
-      env: COMPILER='g++-7'
-
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: 
-            - ubuntu-toolchain-r-test
-          packages: 
-            - g++-8
-      env: COMPILER='g++-8'
-
-    - os: linux
-      compiler: clang
-      addons:
-        apt:
-          sources: 
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-trusty-3.9
           packages:
-            - clang-6.0
-      env: COMPILER='clang++-6.0'
+            - clang-3.9
+      env: COMPILER='clang++-3.9'
 
     - os: linux
       compiler: clang
       addons:
         apt:
           sources: 
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-trusty-4.0
           packages:
-            - clang-7.0
-      env: COMPILER='clang++-7.0'
+            - clang-4.0
+      env: COMPILER='clang++-4.0'
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: 
+            - llvm-toolchain-trusty-5.0
+          packages:
+            - clang-5.0
+      env: COMPILER='clang++-5.0'
 
 dist: trusty
 sudo: false
